Get ruby module up and running